fixed link, added readme

--- a/Demos/index.html
+++ b/Demos/index.html
@@ -8,7 +8,7 @@ body{
 }
 </style>
 <ul>
-	<li><a href="DragList/index.html">Drag List</a>
+	<li><a href="dragList/index.html">Drag List</a>
 	<li><a href="Map/index.html">Map</a>
 	<li><a href="touch.html">Image manipulation (css3)</a>
 	<li><a href="canvasTouch.html">Image manipulation (canvas)</a>
