--- a/Diagrams/index.html
+++ b/Diagrams/index.html
@@ -9,6 +9,6 @@ body{
 </style>
 <ul>
 	<li><a href="touchEvents.html">Touch Events</a>
-	<li><a href="touchEventArrays.html">Touch Event Arrays</a>
+	<li><a href="TouchEventArrays.html">Touch Event Arrays</a>
 	<li><a href="../index.html">Back</a>
 </ul>
